updated api version to semver
